<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/Rectangle_9"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:background="@drawable/rectangle_9" />

    <View
        android:id="@+id/Avatar"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:background="@drawable/ellipse_11" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_below="@id/Avatar"
        android:layout_alignBottom="@+id/Rectangle_9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/montserrat_bold"
        android:lineHeight="28dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/notification"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="53dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/bell_notification" />

    <Button
        android:id="@+id/buttonToNotification"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="53dp"
        android:background="@android:color/transparent" />

    <View
        android:id="@+id/settings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="21dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/settings" />

    <Button
        android:id="@+id/buttonToSettings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="21dp"
        android:background="@android:color/transparent" />

    <View
        android:id="@+id/line"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_below="@id/Rectangle_9"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/line1" />

    <TextView
        android:id="@+id/payment"
        android:layout_width="128dp"
        android:layout_height="17dp"
        android:layout_below="@id/line"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/choosePayment"
        android:lineHeight="17dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/info"
        android:layout_width="133dp"
        android:layout_height="17dp"
        android:layout_below="@id/payment"
        android:layout_marginStart="17dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/noPayment"
        android:lineHeight="12dp"
        android:textSize="10dp"
        android:textStyle="normal"
        android:textColor="#000000" />

    <View
        android:id="@+id/card"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/credit_card_01"
        android:layout_below="@id/line"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="53dp"/>

    <View
        android:id="@+id/strelka1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/chevron_right"
        android:layout_below="@id/line"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:layout_below="@id/line"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent" />

    <View
        android:id="@+id/line1"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_below="@id/info"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/line1" />

    <TextView
        android:id="@+id/bonus"
        android:layout_width="58dp"
        android:layout_height="17dp"
        android:layout_below="@id/line1"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/bonus"
        android:lineHeight="17dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/noBonus"
        android:layout_width="93dp"
        android:layout_height="12dp"
        android:layout_below="@id/bonus"
        android:layout_marginStart="17dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/noBonus"
        android:lineHeight="12dp"
        android:textSize="10dp"
        android:textStyle="normal"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/rub"
        android:layout_width="59dp"
        android:layout_height="15dp"
        android:layout_below="@id/line1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/montserrat_bold"
        android:lineHeight="15dp"
        android:text="@string/rub"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/strelka2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/chevron_right"
        android:layout_below="@id/line1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"/>

    <Button
        android:id="@+id/buttonToBonus"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:layout_below="@id/line1"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent" />

    <View
        android:id="@+id/line2"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_below="@id/noBonus"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/line1" />

    <View
        android:id="@+id/view"
        android:layout_width="370dp"
        android:layout_height="67dp"
        android:background="@drawable/rectangle_8"
        android:layout_below="@id/line2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="17dp"
        android:layout_below="@id/line2"
        android:layout_marginTop="32dp"
        android:layout_marginStart="31dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/BONUS"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:lineHeight="17dp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="345dp"
        android:layout_height="24dp"
        android:layout_below="@id/textView"
        android:layout_marginTop="6dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/B"
        android:textSize="10dp"
        android:textStyle="normal"
        android:lineHeight="12dp"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/x"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:background="@drawable/close_md"
        android:layout_alignParentRight="true"
        android:layout_below="@id/line2"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="29dp" />

    <TextView
        android:id="@+id/links"
        android:layout_width="138dp"
        android:layout_height="17dp"
        android:layout_below="@id/textView1"
        android:layout_marginTop="48dp"
        android:layout_marginStart="17dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/links"
        android:textSize="14dp"
        android:textStyle="bold"
        android:lineHeight="17dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/getBonus"
        android:layout_width="104dp"
        android:layout_height="13dp"
        android:layout_below="@id/links"
        android:layout_marginTop="19dp"
        android:layout_marginStart="17dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/getBonus"
        android:textSize="11dp"
        android:textStyle="normal"
        android:lineHeight="13dp"
        android:textColor="#000000" />

    <View
        android:id="@+id/strelka3"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/chevron_right"
        android:layout_below="@id/links"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16.33dp"
        android:layout_marginEnd="26.33dp"/>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/getBonus"
        android:layout_marginTop="5dp"
        android:background="@drawable/line1" />

    <Button
        android:id="@+id/buttonToGetBonus"
        android:layout_width="370dp"
        android:layout_height="18dp"
        android:layout_below="@id/links"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16.33dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/promoCode"
        android:layout_width="109dp"
        android:layout_height="13dp"
        android:layout_below="@id/line3"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/montserrat_bold"
        android:lineHeight="13dp"
        android:text="@string/promoCode"
        android:textColor="#000000"
        android:textSize="11dp"
        android:textStyle="normal" />

    <View
        android:id="@+id/strelka4"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/chevron_right"
        android:layout_below="@id/line3"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11.33dp"
        android:layout_marginEnd="26.33dp"/>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/line3"
        android:layout_marginTop="32dp"
        android:background="@drawable/line1" />

    <Button
        android:id="@+id/buttonToPromoCode"
        android:layout_width="370dp"
        android:layout_height="18dp"
        android:layout_below="@id/line3"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10.5dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/help"
        android:layout_width="116dp"
        android:layout_height="13dp"
        android:layout_below="@id/line4"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/montserrat_bold"
        android:lineHeight="13dp"
        android:text="@string/promoCode"
        android:textColor="#000000"
        android:textSize="11dp"
        android:textStyle="normal" />

    <View
        android:id="@+id/strelka5"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/chevron_right"
        android:layout_below="@id/line4"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11.33dp"
        android:layout_marginEnd="26.33dp"/>

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/line4"
        android:layout_marginTop="32dp"
        android:background="@drawable/line1" />

    <Button
        android:id="@+id/buttonToHelp"
        android:layout_width="370dp"
        android:layout_height="18dp"
        android:layout_below="@id/line4"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10.5dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/history"
        android:layout_width="99dp"
        android:layout_height="13dp"
        android:layout_below="@id/line5"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/montserrat_bold"
        android:lineHeight="13dp"
        android:text="@string/history"
        android:textColor="#000000"
        android:textSize="11dp"
        android:textStyle="normal" />

    <View
        android:id="@+id/strelka6"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/chevron_right"
        android:layout_below="@id/line5"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11.33dp"
        android:layout_marginEnd="26.33dp"/>

    <View
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/line5"
        android:layout_marginTop="32dp"
        android:background="@drawable/line1" />

    <Button
        android:id="@+id/buttonToHistory"
        android:layout_width="370dp"
        android:layout_height="18dp"
        android:layout_below="@id/line5"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10.5dp"
        android:background="@android:color/transparent" />

</RelativeLayout>